--- a/duels-plugin/src/main/resources/lang.yml
+++ b/duels-plugin/src/main/resources/lang.yml
@@ -4,106 +4,106 @@ config-version: 8
 # Define placeholders usable in any message below.
 # Example: Adding 'PREFIX: "[Cool]"' below and then putting '{PREFIX}' in a message will display '[Cool]' when the message is sent in game.
 STRINGS:
-  PREFIX: '&9[Duels]'
+  PREFIX: '&9[Düello]'
   LINE: '&9&m------------------------------------&r'
   HALF_LINE: '&9&m----------------&r'
-  FAIL_PREFIX: '&cFailed to start the match:'
+  FAIL_PREFIX: '&cMaç başlatılırken hata oluştu:'
 
 
 GENERAL:
-  true: '&atrue'
-  false: '&cfalse'
-  enabled: '&aenabled'
-  disabled: '&cdisabled'
-  not-selected: 'Not Selected'
-  random: 'Random'
-  none: 'none'
-  kit-selector: 'Kit Selector'
-  arena-selector: 'Arena Selector'
-  item-betting: 'Item Betting'
-  betting: 'Betting'
+  true: '&adoğru'
+  false: '&cyanlış'
+  enabled: '&aaktif'
+  disabled: '&cdeaktif'
+  not-selected: 'Seçilmedi'
+  random: 'Rasgele'
+  none: 'Hiçbiri'
+  kit-selector: 'Kit Seçici'
+  arena-selector: 'Arena Seçici'
+  item-betting: 'Eşya Yatırma'
+  betting: 'İddialar'
 
 
 ERROR:
-  no-permission: '{PREFIX} &cNope! You are lacking the following permission: ''%permission%'''
+  no-permission: '{PREFIX} &cHopp! Şu yetkiye sahip değilsin: ''%permission%'''
   data:
-    load-failure: '{PREFIX} &cCould not load your duel stats. Please try re-logging.'
-    not-loaded: '{PREFIX} &cUsers are still under load, please try again later.'
-    not-found: '{PREFIX} &c%name% has no duel stats available.'
+    load-failure: '{PREFIX} &cDüello bilgilerini yükleyemedik. Tekrardan oyuna giriş yap.'
+    not-loaded: '{PREFIX} &cOyuncular henüz yüklenmedi, sonra tekrar deneyin.'
+    not-found: '{PREFIX} &c%name% kişisinin hiç bilgisi yok.'
   top:
     no-data-available: '{PREFIX} &cThere were no data available.'
   player:
-    not-found: '{PREFIX} &c%name% is not online.'
-    no-longer-online: '{PREFIX} &cThat player is no longer online.'
+    not-found: '{PREFIX} &c%name% çevrimiçi değil.'
+    no-longer-online: '{PREFIX} &cBu oyuncu artık çevrimiçi değil.'
   arena:
-    not-found: '{PREFIX} &cNo arena exists with the name ''%name%''.'
-    already-exists: '{PREFIX} &cAn arena named ''%name%'' already exists.'
-    delete-failure: '{PREFIX} &cCannot delete an arena that is currently in use. Please disable it first using the command ''/duels toggle %name%'''
-    invalid-position: '{PREFIX} &cPosition must be 1 or 2.'
-    no-position-set: '{PREFIX} &cArena ''%name%'' have no positions set.'
+    not-found: '{PREFIX} &cŞu isimde bir arena bulunamadı: ''%name%''.'
+    already-exists: '{PREFIX} &cŞu isimde bir arena zaten var: ''%name%''.'
+    delete-failure: '{PREFIX} &cKullanımdaki bir arenayı silemezsin. Şu komutla arenayı kapat: ''/duels toggle %name%'''
+    invalid-position: '{PREFIX} &cPozisyon 1 ve 2 olmalıdır.'
+    no-position-set: '{PREFIX} &cArena ''%name%'' bölgesinde pozisyon seçilmemiş.'
   kit:
-    not-found: '{PREFIX} &cNo kit exists with the name ''%name%''.'
-    already-exists: '{PREFIX} &cA kit named ''%name%'' already exists.'
-    empty-hand: '{PREFIX} &cYou must be holding an item to use this command.'
+    not-found: '{PREFIX} &cŞu isimde bir kit bulunamadı: ''%name%''.'
+    already-exists: '{PREFIX} &cŞu isimde bir kit zaten var: ''%name%''.'
+    empty-hand: '{PREFIX} &cBu komudu kulalnmak için elinde eşya tutmalısın.'
   duel:
-    is-self: '{PREFIX} &cYou cannot duel yourself.'
-    inventory-not-empty: '{PREFIX} &cYou must have a cleared inventory to use this command.'
-    in-creative-mode: '{PREFIX} &cYou cannot duel in creative mode.'
-    in-blacklisted-world: '{PREFIX} &cYou cannot duel in this world.'
-    is-tagged: '{PREFIX} &cYou cannot duel while combat tagged.'
-    not-in-duelzone: '{PREFIX} &cYou can only duel in the following regions: %regions%'
-    requests-disabled: '{PREFIX} &c%name% is currently not accepting duel requests.'
-    already-has-request: '{PREFIX} &cYou already have a request sent to %name%.'
-    no-request: '{PREFIX} &cYou do not have a request from %name%.'
+    is-self: '{PREFIX} &cKendinle düello atamazsın.'
+    inventory-not-empty: '{PREFIX} &cBu komut için envanterini boşalt.'
+    in-creative-mode: '{PREFIX} &cYaratıcı modda düello atamazsın.'
+    in-blacklisted-world: '{PREFIX} &cBu dünyada düello atamazsın.'
+    is-tagged: '{PREFIX} &cSavaştayken düello atamazsın.'
+    not-in-duelzone: '{PREFIX} &cSadece şu bölgelerde düello atabilirsin: %regions%'
+    requests-disabled: '{PREFIX} &c%name% kişisi düello isteklerini reddediyor.'
+    already-has-request: '{PREFIX} &cŞu kişiye zaten düello isteği yollamışsın: %name%.'
+    no-request: '{PREFIX} &c%name% kişisinden aldığın bir istek yok.'
     already-in-match:
-      sender: '{PREFIX} &cYou cannot do this while in a duel.'
-      target: '{PREFIX} &c%name% is already in a duel.'
-    already-in-queue: '{PREFIX} &cYou cannot do this while in a queue.'
-    prevent-teleportation: '{PREFIX} &cCannot teleport to a player in a duel.'
+      sender: '{PREFIX} &cDüelloda bunu yapamazsın.'
+      target: '{PREFIX} &c%name% kişisi şuan düelloda.'
+    already-in-queue: '{PREFIX} &cSıradayken bunu yapamazsın.'
+    prevent-teleportation: '{PREFIX} &cDüellodayken ışınlanamazsın.'
   spectate:
     already-spectating:
-      sender: '{PREFIX} &cYou cannot do this while in spectator mode.'
-      target: '{PREFIX} &c%name% is in spectator mode.'
-    not-in-match: '{PREFIX} &c%name% is not in a duel.'
+      sender: '{PREFIX} &cİzleyici modunda bunu yapamazsın.'
+      target: '{PREFIX} &c%name% kişisi izleyici modunda.'
+    not-in-match: '{PREFIX} &c%name% kişisi düelloda değil.'
   setting:
-    disabled-option: '{PREFIX} &c%option% is currently disabled.'
-    arena-not-applicable: '{PREFIX} &cYou cannot use kit %kit% on this arena.'
+    disabled-option: '{PREFIX} &c%option% ayarı şuanlık kapatıldı.'
+    arena-not-applicable: '{PREFIX} &c%kit% kitini bu arenada kullanamazsın.'
   inventory-view:
-    not-a-uuid: '{PREFIX} &c%input% is not a valid UUID.'
-    not-found: '{PREFIX} &cNo inventory exists with the UUID ''%uuid%''.'
+    not-a-uuid: '{PREFIX} &c%input% bu geçerli bir UUID değil.'
+    not-found: '{PREFIX} &cŞu UUID''e sahip bir envanter bulunamadı: ''%uuid%''.'
   queue:
-    not-found: '{PREFIX} &cNo queue exists with kit %kit% and bet $%bet_amount%.'
-    already-exists: '{PREFIX} &cA queue with kit ''%kit%'' and bet $%bet_amount% already exists.'
-    already-in: '{PREFIX} &cYou are already in a queue!'
-    not-in-queue: '{PREFIX} &cYou are not in a queue.'
-    not-enough-money: '{PREFIX} &cYou need $%bet_amount% to join that queue.'
-    no-queues-available: '{PREFIX} &cNo queues are available.'
+    not-found: '{PREFIX} &c%kit% kitinde ve $%bet_amount% bahsinde bir sıra bulunamadı.'
+    already-exists: '{PREFIX} &c%kit% kitinde ve $%bet_amount% bahsinde bir sıra zaten var.'
+    already-in: '{PREFIX} &cZaten sıradasın!'
+    not-in-queue: '{PREFIX} &cŞuan sırada değilsin.'
+    not-enough-money: '{PREFIX} &cBu sıraya katılmak için $%bet_amount% bahis oynamalısın.'
+    no-queues-available: '{PREFIX} &cMevcut bir sıra yok.'
   sign:
-    not-a-sign: '{PREFIX} &cThe block you are looking at is not a sign!'
-    not-found: '{PREFIX} &cThat sign is not a queue sign!'
-    already-exists: '{PREFIX} &cThat sign is already a queue sign! To remove, use the command ''/duels delsign'''
-    cancel-break: '{PREFIX} &cYou cannot break a queue sign manually! Please use the command ''/duels delsign'''
+    not-a-sign: '{PREFIX} &cBaktığın blok bir tabela değil!'
+    not-found: '{PREFIX} &cBu tabela bir sıra tabelası değil!'
+    already-exists: '{PREFIX} &cBu tabela zaten kullanılıyor! Silmek için şu komudu kullan: ''/duels delsign'''
+    cancel-break: '{PREFIX} &cBu tabelayı elinle kıramazsın! Silmek için şu komudu kullan: ''/duels delsign'''
   sound:
-    not-found: '{PREFIX} &cNo sound exists with the name ''%name%''.'
+    not-found: '{PREFIX} &cŞöyle bir ses bulunamadı: ''%name%''.'
   command:
-    invalid-sub-command: '{PREFIX} &c''%argument%'' is not a valid sub command. Please type ''/%command%'' for help.'
-    invalid-option: '{PREFIX} &c''%option%'' is not a valid option. Available options are: %available_options%'
-    invalid-action: '{PREFIX} &c''%action%'' is not a valid action. Available actions are: %available_actions%'
-    not-enough-money: '{PREFIX} &cYou do not have enough money to bet!'
-    lobby-save-failure: '{PREFIX} &cCould not save lobby location. Please check the console for more information.'
-    name-not-alphanumeric: '{PREFIX} &c''%name%'' is not alphanumeric.'
+    invalid-sub-command: '{PREFIX} &c''%argument%'' komudu geçerli değil. Yardım için ''/%command%'' komudunu kullanın.'
+    invalid-option: '{PREFIX} &c''%option%'' geçerli bir ayar değil. Mevcut ayarlar şunlar: %available_options%'
+    invalid-action: '{PREFIX} &c''%action%'' geçerli bir aksiyon değil. Mevcut aksiyonlar şunlar: %available_actions%'
+    not-enough-money: '{PREFIX} &cBahis için paran yeterli yok!'
+    lobby-save-failure: '{PREFIX} &cLobi lokasyonu kaydedilemedi. Lütfen konsolu kontrol edin.'
+    name-not-alphanumeric: '{PREFIX} &c''%name%'' numaradan oluşan bir isim değil.'
 
 
 COMMAND:
   duel:
     usage:
     - '{LINE}'
-    - '&f/%command% [player] &e- &7Sends a duel request to player.'
-    - '&f/%command% [player] <amount> &e- &7Sends a duel request with a bet.'
-    - '&f/%command% [accept | deny] [player] &e- &7Accepts or denies a duel request.'
-    - '&f/%command% stats <name> &e- &7Displays your duel stats.'
-    - '&f/%command% toggle &e- &7Enable or disable receiving duel requests.'
-    - '&f/%command% top [-|wins|losses|kit] &e- &7Displays top wins, losses, or rating for the kit.'
+    - '&f/%command% [player] &e- &7Oyuncuya düello isteği gönderir.'
+    - '&f/%command% [player] <amount> &e- &7Oyuncuya bahisli düello isteği gönderir.'
+    - '&f/%command% [accept | deny] [player] &e- &7Düello isteğini Kabul veya Ret eder.'
+    - '&f/%command% stats <name> &e- &7Düello bilgilerini gösterir.'
+    - '&f/%command% toggle &e- &7Düello isteklerini aç veya kapat.'
+    - '&f/%command% top [-|wins|losses|kit] &e- &7En çok kazananı, kayedeni veya kit oylamasını gösterir.'
     - '{LINE}'
     request:
       send:
